# Search-Engine

./: CMakeLists.txt  README.md  client_http.hpp  http_examples.cpp  server_http.hpp  teste.cpp
Searcher/: anchorRank.cpp  anchorRank.h  boolean.cpp  boolean.h  main.cpp  makefile  pageRank.cpp  pageRank.h  searcher.cpp  searcher.h  vectorModel.cpp  vectorModel.h
web/: index.html
web/assets/css/: style.css
web/assets/js/: app.js
